[metadata]
name = pyacme
version = 0.1.0
description = Python ACME client
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License
license_files = LICENSE
author = Alireza Azizi
author_email = devazizi@gmail.com
url = https://github.com/devazizi/pyacme
project_urls =
    Source = https://github.com/devazizi/pyacme
    Issues = https://github.com/devazizi/pyacme/issues
keywords = acme, letsencrypt, certificate, tls, automation
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = true
install_requires =
    requests>=2.31.0
    cryptography>=42.0

[options.packages.find]
where = .
include = pyacme*

[options.entry_points]
console_scripts =
    pyacme = pyacme.__main__:main
