[metadata]
name = pyacmecli
version = 0.1.1
description = Python ACME client cli
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
author = Alireza Azizi
author_email = devazizi@gmail.com
url = https://github.com/devazizi/pyacme
project_urls =
    Source = https://github.com/devazizi/pyacme
    Issues = https://github.com/devazizi/pyacme/issues
keywords = acme, letsencrypt, certificate, tls, automation

[options]
packages = find:
python_requires = >=3.9
include_package_data = true
install_requires =
    acme==5.1.0
    certifi==2025.10.5
    cffi==2.0.0
    charset-normalizer==3.4.3
    click==8.3.0
    cryptography==46.0.2
    dnspython==2.8.0
    filelock==3.20.0
    idna==3.10
    jeepney==0.9.0
    josepy==2.1.0
    keyring==25.7.0
    markdown-it-py==4.0.0
    mdurl==0.1.2
    more-itertools==10.8.0
    nh3==0.3.2
    packaging==25.0
    pycparser==2.23
    Pygments==2.19.2
    pyOpenSSL==25.3.0
    pyRFC3339==2.1.0
    readme_renderer==44.0
    requests==2.32.5
    requests-file==2.1.0
    requests-toolbelt==1.0.0
    rfc3986==2.0.0
    rich==14.2.0
    SecretStorage==3.5.0
    tabulate==0.9.0
    tldextract==5.3.0
    typing_extensions==4.15.0
    urllib3==2.5.0
    validators==0.35.0

[options.packages.find]
where = .
include = pyacmecli*

[options.entry_points]
console_scripts =
    pyacmecli = pyacmecli.__main__:main
